add:language selection

--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -1,189 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="OverParse.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
-    </startup>
-    <userSettings>
-        <OverParse.Properties.Settings>
-            <setting name="Path" serializeAs="String">
-                <value>C:\Program Files (x86)\SEGA\PHANTASYSTARONLINE2\pso2_bin</value>
-            </setting>
-            <setting name="LaunchMethod" serializeAs="String">
-                <value>Unknown</value>
-            </setting>
-            <setting name="InstalledPluginVersion" serializeAs="String">
-                <value>-1</value>
-            </setting>
-            <setting name="EncounterTimeout" serializeAs="String">
-                <value>60</value>
-            </setting>
-            <setting name="Left" serializeAs="String">
-                <value>50</value>
-            </setting>
-            <setting name="Width" serializeAs="String">
-                <value>670</value>
-            </setting>
-            <setting name="WindowOpacity" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="Height" serializeAs="String">
-                <value>275</value>
-            </setting>
-            <setting name="Top" serializeAs="String">
-                <value>50</value>
-            </setting>
-            <setting name="LogToClipboard" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="FirstRun" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="BanWarning" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SeparateZanverse" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ClickthroughEnabled" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="NeedsPluginUpdate" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ResetInvoked" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AutoHideWindow" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AutoHideWindowWarning" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AutoEndEncounters" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HighlightYourDamage" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AlwaysOnTop" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="Maximized" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparateAIS" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="UpgradeRequired" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AnonymizeNames" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparateAuxDamage" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="CompactMode" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ShowDamageGraph" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListOpacity" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="SeparatePwp" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparateDB" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparateRide" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparateFinish" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="LowResources" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="CPUdraw" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="Clock" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="DPSformat" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="Nodecimal" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="Onlyme" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="NomyName" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="SeparateLsw" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HideLsw" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HidePlayers" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HideAIS" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HidePwp" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HideDB" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="HideRide" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ListName" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListPct" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListDmg" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListDmgd" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListDPS" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListJA" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListCri" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListHit" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ListAtk" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="Variable" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="Updateinv" serializeAs="String">
-                <value>1000</value>
-            </setting>
-        </OverParse.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="OverParse.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
+  </startup>
+  <userSettings>
+    <OverParse.Properties.Settings>
+      <setting name="Path" serializeAs="String">
+        <value>C:\Program Files (x86)\SEGA\PHANTASYSTARONLINE2\pso2_bin</value>
+      </setting>
+      <setting name="LaunchMethod" serializeAs="String">
+        <value>Unknown</value>
+      </setting>
+      <setting name="InstalledPluginVersion" serializeAs="String">
+        <value>-1</value>
+      </setting>
+      <setting name="EncounterTimeout" serializeAs="String">
+        <value>60</value>
+      </setting>
+      <setting name="Left" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="Width" serializeAs="String">
+        <value>670</value>
+      </setting>
+      <setting name="WindowOpacity" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Height" serializeAs="String">
+        <value>275</value>
+      </setting>
+      <setting name="Top" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="LogToClipboard" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FirstRun" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="BanWarning" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SeparateZanverse" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ClickthroughEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="NeedsPluginUpdate" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ResetInvoked" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoHideWindow" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoHideWindowWarning" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="AutoEndEncounters" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HighlightYourDamage" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="AlwaysOnTop" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Maximized" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SeparateAIS" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="AnonymizeNames" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SeparateAuxDamage" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="CompactMode" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ShowDamageGraph" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListOpacity" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="SeparatePwp" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SeparateDB" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SeparateRide" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SeparateFinish" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="LowResources" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="CPUdraw" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Clock" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="DPSformat" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Nodecimal" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Onlyme" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="NomyName" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SeparateLsw" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HideLsw" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HidePlayers" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HideAIS" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HidePwp" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HideDB" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="HideRide" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ListName" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListPct" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListDmg" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListDmgd" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListDPS" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListJA" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListCri" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListHit" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ListAtk" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Variable" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Updateinv" serializeAs="String">
+        <value>1000</value>
+      </setting>
+      <setting name="skills_tw_hk" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="skills_en" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="skills_ja" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </OverParse.Properties.Settings>
+  </userSettings>
 </configuration>
