Added Status Ailment Damage Separation

--- a/OverParse/App.config
+++ b/OverParse/App.config
@@ -193,6 +193,9 @@
       <setting name="skills_ja" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="SeparateStatus" serializeAs="String">
+        <value>False</value>
+      </setting>
     </OverParse.Properties.Settings>
   </userSettings>
 </configuration>
